# guhcampos.github.io

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  README.md  index.html  pyproject.toml
.cursor/rules/: cli-development.mdc  hugo-development.mdc  project-structure.mdc  python-development.mdc  spotify-integration.mdc  testing-standards.mdc
.github/workflows/: hugo.yml
config/_default/: languages.en.toml  menus.en.toml
content/: _index.md
content/topics/: _index.md
content/topics/technology/video-game-development/: godot-game-engine.md
hugo/: hugo.toml
hugo/assets/css/: custom.css
hugo/config/_default/: hugo.toml  languages.en.toml  languages.pt-br.toml  menus.en.toml  menus.pt-br.toml  module.toml  params.toml
hugo/content/: _index.md
hugo/content/en/: about.md
hugo/content/en/playlists/: _content.gotmpl  _index.md
hugo/content/en/posts/: pairing-with-ai-to-design-this-website-part-01-first-steps.md
hugo/content/pt/: about.md
hugo/content/pt-br/: about.md
hugo/content/pt-br/playlists/: _index.md
hugo/content/pt/playlists/: _index.md
hugo/layouts/_shortcodes/: playlist-display.html  playlists-index.html
hugo/layouts/partials/article-link/: playlist-card.html
hugo/layouts/partials/playlists/: playlist-controls.html  playlist-table.html
hugo/layouts/playlists/: list.html  playlist.html  single.html
hugo/layouts/resources/: list.html  section.html
hugo/layouts/tags/: list.html
layouts/partials/: under-construction.html
layouts/tags/: term.html
scripts/: sync-obsidian
src/: sync-obsidian
src/guhcampos/: README.md  cli.py  core.py  hugo.py  jdecimal.py  logging.py  settings.py  utils.py
src/guhcampos/obsidian/: client.py  errors.py  models.py
src/guhcampos/spotify/: client.py  models.py
tests/: test_spotify.py
